Simplify some code